@@ -1,6 +1,6 @@
 /*
-   Copyright (C) 2006-2012, 2014 Free Software Foundation, Inc.
-   Written by Roger While
+   Copyright (C) 2006-2012, 2014, 2016 Free Software Foundation, Inc.
+   Written by Roger While, Simon Sobisch, Ron Norman
 
    This file is part of GnuCOBOL.
 
@@ -37,6 +37,11 @@ COB_SYSTEM_GEN ("CBL_EQ",		3, cob_sys_eq)
 COB_SYSTEM_GEN ("CBL_ERROR_PROC",	2, cob_sys_error_proc)
 COB_SYSTEM_GEN ("CBL_EXIT_PROC",	2, cob_sys_exit_proc)
 COB_SYSTEM_GEN ("CBL_FLUSH_FILE",	1, cob_sys_flush_file)
+COB_SYSTEM_GEN ("CBL_GC_FORK",		0, cob_sys_fork)
+COB_SYSTEM_GEN ("CBL_GC_GETOPT",	6, cob_sys_getopt_long_long)
+COB_SYSTEM_GEN ("CBL_GC_HOSTED",	2, cob_sys_hosted)
+COB_SYSTEM_GEN ("CBL_GC_NANOSLEEP",	1, cob_sys_oc_nanosleep)
+COB_SYSTEM_GEN ("CBL_GC_WAITPID",	1, cob_sys_waitpid)
 COB_SYSTEM_GEN ("CBL_GET_CSR_POS",	1, cob_sys_get_csr_pos)
 COB_SYSTEM_GEN ("CBL_GET_CURRENT_DIR",	3, cob_sys_get_current_dir)
 COB_SYSTEM_GEN ("CBL_GET_SCR_SIZE",	2, cob_sys_get_scr_size)
