@@ -1,4 +1,10 @@
 
+2016-11-17 Ron Norman <rjn@inglenet.com>
+
+	* common.c,common.h,system.def: added cob_sys_fork for CBL_GC_FORK
+	  and cob_sys_waitpid for CBL_GC_WAITPID. This is to implement the
+	  ability to fork a new process and then wait for its completion
+
 2016-11-13  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* common.c, coblocal.h, fileio.c: moved common code parts of fileio.c as
